--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>NISHANT RAJ</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./CSS/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
 </head>
 
