--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a class="footer-link" href="https://twitter.com/"><strong>Twitter</strong></a>
         <a class="footer-link" href="https://www.appbrewery.co/"><strong>Website</strong></a>
       </div>
-      <p> © 2019 Nishant Raj @ My Web page </p>
+      <p class="copyright"> © 2019 Nishant Raj @ My Web page </p>
     </footer>
   </div>
 
